fix back button alignment via CSS

--- a/src/styles/Foods.css
+++ b/src/styles/Foods.css
@@ -132,6 +132,11 @@ form {
   width: 33vw;
 }
 
+.return {
+  padding: 1rem;
+  margin: 1rem;
+}
+
 @media (max-width: 1242px) {
   .box {
     width: 100%;
